# json_labs

./: .gitignore  README.md
labs/: CMakeLists.txt  FileName.cpp  FileName.h  FilesStorage.cpp  FilesStorage.h  Mains.cpp  Mains.h  lab.cpp  lab.h  lab01.cpp  lab01.h  main.cpp  readAndParse.cpp  readAndParse.h
labs/directory_for_lab8/: file5.txt  originalFile.txt
labs/files_for_lab10/: 1239_10_14_past.txt  1984_01_01_meme.txt  2000_10_05_removeToo.txt  2015_12_25_removeRequired.txt  2016_04_04_file.txt
labs/files_for_lab2/: another_object.json  bigger_file_for_lab2.json  test_file_for_lab2.json
labs/files_for_lab2/output/: order.json  user.json
labs/files_for_lab9/for_tests/: 0000_02_21_wrongYear.txt  0000_15_32_everythingIsWrong.txt  10_02_42_wrongYearAndDay.txt  19_13_01_wrongYearAndMonth.txt  2024_07_69_wrongDay.txt  2024_31_12_wrongMonth.txt  2024_32_32_wrongMonthAndDay.txt
labs/output/: output.json
labs/output_lab3/: output.json
labs/output_lab4/: fs_object_info.json
labs/tests_for_lab1/: test.cc
labs/tests_for_lab1/testing_files_for_lab1/: invalid_array.json  invalid_inner_array.json  invalid_number.json  invalid_string.json  no_array.json  ok_variant.json
labs/tests_for_labs/: test.cc
labs/tests_for_labs/testing_files_for_lab1/: no_object.json
